# fixerr

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: data.csv
src/: engine.rs  lib.rs  main.rs  ui.rs
